添加注解绑定View的功能，更新demo
注解相关类和方法:ViewInject和autoInjectViewField()

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ $RECYCLE.BIN/
 *.lnk
 FrameProject/.idea/vcs.xml
 FrameProject/.idea/misc.xml
+FrameProject/.idea/misc.xml
+FrameProject/.idea/runConfigurations.xml
