添加忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ FrameProject/.idea/vcs.xml
 FrameProject/.idea/misc.xml
 FrameProject/.idea/misc.xml
 FrameProject/.idea/runConfigurations.xml
+FrameProject/.idea/misc.xml
+FrameProject/app/app.iml
+*.iml
