框架基础webview的简单封装
可通过webviewtype的参数进行快速配置

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ FrameProject/.idea/runConfigurations.xml
 FrameProject/.idea/misc.xml
 FrameProject/app/app.iml
 *.iml
+FrameProject/.idea/misc.xml
+FrameProject/app/app.iml
