--- a/FrameProject/framelibrary/src/main/AndroidManifest.xml
+++ b/FrameProject/framelibrary/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="joe.framelibrary">
+<manifest
+    package="joe.framelibrary"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application android:allowBackup="true" android:label="@string/app_name">
-
-    </application>
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"/>
 
 </manifest>
