--- a/FrameProject/framelibrary/src/main/AndroidManifest.xml
+++ b/FrameProject/framelibrary/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
     package="joe.framelibrary"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"/>
