--- a/FrameProject/framelibrary/build.gradle
+++ b/FrameProject/framelibrary/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile files('libs/nineoldandroids-library-2.4.0.jar')
     compile files('libs/android-async-http-1.4.9.jar')
     compile files('libs/httpclient-4.4.1.1.jar')
+    compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
 }
