--- a/FrameProject/framelibrary/build.gradle
+++ b/FrameProject/framelibrary/build.gradle
@@ -21,8 +21,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile files('libs/nineoldandroids-library-2.4.0.jar')
-    compile files('libs/android-async-http-1.4.9.jar')
+    compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.nineoldandroids:library:2.4.0'
     compile files('libs/httpclient-4.4.1.1.jar')
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
