--- a/FrameProject/framelibrary/build.gradle
+++ b/FrameProject/framelibrary/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.loopj.android:android-async-http:1.4.9'
 }
