--- a/FrameProject/framelibrary/build.gradle
+++ b/FrameProject/framelibrary/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'org.simple:androideventbus:1.0.5.1'
 }
