--- a/FrameProject/framelibrary/build.gradle
+++ b/FrameProject/framelibrary/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'org.simple:androideventbus:1.0.5.1'
     compile 'com.android.support:cardview-v7:23.2.0'
