添加CrashHandler修复方案
1分钟内多次崩溃，将会出现修复界面，通过断网，清除数据来进行恢复

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+FrameProject/.gradle
+FrameProject/.idea
 FrameProject/.idea/vcs.xml
 FrameProject/.idea/misc.xml
 FrameProject/.idea/misc.xml
